<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/date"
        android:layout_weight="20"
        android:id="@+id/dateStock"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/category_group"
        android:layout_weight="20"
        android:id="@+id/categoryStock"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/item_name"
        android:layout_weight="20"
        android:id="@+id/nameStock"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/item_code"
        android:layout_weight="20"
        android:id="@+id/codeStock"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/item_price"
        android:layout_weight="20"
        android:id="@+id/priceStock"/>


</LinearLayout>