<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakePayment">


    <ScrollView
        android:layout_width="154dp"
        android:layout_height="254dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priceLayout"
            android:orientation="vertical">

            <Button
                android:id="@+id/ten_cents"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/ten_cents" />

            <Button
                android:id="@+id/twenty_cents"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/twenty_cents" />

            <Button
                android:id="@+id/fifty_cents"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/fifty_cents" />


            <Button
                android:id="@+id/one_rand"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/one_rand" />

            <Button
                android:id="@+id/two_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/two_rands" />

            <Button
                android:id="@+id/five_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/five_rands" />

            <Button
                android:id="@+id/ten_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/ten_rands" />

            <Button
                android:id="@+id/twenty_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/twenty_rands" />

            <Button
                android:id="@+id/fifty_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/fifty_rands" />

            <Button
                android:id="@+id/hundred_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/hundred_rands" />

            <Button
                android:id="@+id/two_hundred_rands"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/two_hundred_rands" />

            <Button
                android:id="@+id/on_credit_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="On Credit" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editMoneyBox"
        android:layout_width="226dp"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/enter_money"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="191dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="41dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="530dp" />

    <ImageButton
        android:id="@+id/done"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/done"
        android:src="@drawable/check"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="615dp" />

    <ImageButton
        android:id="@+id/clear"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/clear"
        android:src="@drawable/clear"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="338dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="53dp" />
</androidx.constraintlayout.widget.ConstraintLayout>