<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">


    <Button
        android:id="@+id/button_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selling"
        app:layout_constraintBottom_toBottomOf="@id/button_petty_cash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_petty_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petty_cash"
        app:layout_constraintBottom_toBottomOf="@id/button_receive_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_sell" />

    <Button
        android:id="@+id/button_receive_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_stock"
        app:layout_constraintBottom_toBottomOf="@id/button_records"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_petty_cash" />

    <Button
        android:id="@+id/button_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_receive_stock" />


</androidx.constraintlayout.widget.ConstraintLayout>