<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="172dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="477dp" />

    <EditText
        android:id="@+id/category_group"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/category_group"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <LinearLayout
        android:layout_width="169dp"
        android:layout_height="273dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/item_code"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/item_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/item_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/item_quantity"
            android:inputType="number" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/receive"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:contentDescription="@string/receive_stock"
        android:src="@drawable/check"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="543dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="101dp" />

</androidx.constraintlayout.widget.ConstraintLayout>