<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecords">


    <ListView
        android:id="@+id/recordsViewer"
        android:layout_width="397dp"
        android:layout_height="526dp"
        android:orientation="vertical"
        android:background="@color/navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2">


    </ListView>

    <include
        android:id="@+id/include2"
        layout="@layout/sales_records" />


    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="176dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordsViewer">

        <Button
            android:id="@+id/updatePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_price" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/done"
            android:src="@drawable/check"
            android:backgroundTint="@color/blue"
            android:scaleType="fitCenter"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>