<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CashFragment">


    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="208dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15">

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/account_name" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/amount" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:contentDescription="@string/done"
        android:src="@drawable/check"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="510dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="399dp" />

</androidx.constraintlayout.widget.ConstraintLayout>