<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Analysis">

    <!-- Buttons section -->
    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23">

        <Button
            android:id="@+id/btnTotalSales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_sales" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnSalesByCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_category" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnTopSellingProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_category" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/done"
            android:src="@drawable/check"
            android:backgroundTint="@color/blue"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <!-- Line Chart -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/barChart"
        android:layout_width="386dp"
        android:layout_height="435dp"
        android:background="@color/navy"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />
    <!-- Pie Chart -->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="386dp"
        android:layout_height="435dp"
        android:background="@color/navy"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />
    <!-- Bar Chart -->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/productChart"
        android:layout_width="386dp"
        android:layout_height="435dp"
        android:background="@color/navy"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="478dp" />
</androidx.constraintlayout.widget.ConstraintLayout>